src/builder/tests/snapshots/ciboulette2postgres__builder__tests__simple.snap
---
source: src/builder/tests/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
($0 :: uuid),
($1 :: uuid);
