src/builder/tests/snapshots/ciboulette2postgres__builder__tests__simple_single_rel.snap
---
source: src/builder/tests/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
UPDATE
  "public"."peoples"
SET
  "public"."peoples"."favorite_color" = NULL
WHERE
  "public"."peoples"."id" $0;
