src/builder/tests/snapshots/ciboulette2postgres__builder__tests__single-2.snap
---
source: src/builder/tests/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
"cte_favorite_color_data" AS (
  SELECT
    "public"."favorite_color"."color"
  FROM
    "cte_peoples_main"
    INNER JOIN "public"."peoples" ON "public"."peoples"."id" = "cte_peoples_main"."id"
    INNER JOIN "public"."favorite_color" ON "public"."favorite_color"."id" = "public"."peoples"."favorite_color";
