src/builder/tests/snapshots/ciboulette2postgres__builder__tests__sparse.snap
---
source: src/builder/tests/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
SELECT
  "public"."peoples"."id" :: TEXT AS "id",
  $0 :: TEXT AS "type",
  JSON_BUILD_OBJECT($1, "public"."peoples"."first-name") AS "data"
FROM
  "public"."peoples";
