src/builder/tests/snapshots/ciboulette2postgres__builder__tests__sparse_field.snap
---
source: src/builder/tests/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
JSON_BUILD_OBJECT(
  $0,
  "public"."peoples"."first-name",
  $1,
  "public"."peoples"."last-name"
);
