src/builder/tests/snapshots/ciboulette2postgres__builder__tests__sparse_field_empty.snap
---
source: src/builder/tests/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
NULL :: json;
